--- a/dev/python/pyproject.toml
+++ b/dev/python/pyproject.toml
@@ -7,9 +7,10 @@ authors = [
 ]
 dependencies = [
     "fastapi>=0.115.6",
-    "uvicorn>=0.32.1",
+    "uvicorn[standard]>=0.34.0",
     "opencv-python>=4.10.0.84",
     "numpy>=2.2.0",
+    "websockets>=14.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
