--- a/dev/database/pyproject.toml
+++ b/dev/database/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "uvicorn[standard]>=0.34.0",
     "sqlalchemy>=2.0.36",
     "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
