--- a/dev/python/pyproject.toml
+++ b/dev/python/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "uvicorn>=0.32.1",
     "opencv-python>=4.10.0.84",
     "numpy>=2.2.0",
+    "python-multipart>=0.0.20",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
