--- a/dev/python/pyproject.toml
+++ b/dev/python/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "opencv-python>=4.10.0.84",
     "numpy>=2.2.0",
     "python-multipart>=0.0.20",
+    "websockets>=14.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
